fix alignement

--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -40,4 +40,5 @@ a.product-link:hover {
   color: $c-red;
   border-bottom: 6px solid $c-yellow;
   margin-top: 30px;
+  text-align: center;
 }
